@@ -35,9 +35,13 @@ You can try the generator <A href="submitForm.html" name="here">here</A>.
 
 Please note though that it is running on a very small computer, and can only deal with one request at a time (I do not know what will happen if more than one person tries to use it at once!).  I will add a queue to make it multi-user friendly one evening next week.
 
-The source code for the townguide generator is at <a href="http://code.google.com/p/ntmisc">http://code.google.com/p/ntmisc</a> - I will move it to a separate project next week.
+The source code for the townguide generator is at <a href="http://code.google.com/p/townguide">http://code.google.com/p/townguide</a> - I will move it to a separate project next week.
 
 <h2>Contact</h2>
-If you have any comments on the program or its output, please email me on grahamjones139 at googlemail.com. 
+If you have any comments on the program or its output, please email me on grahamjones139 at googlemail.com and/or raise an issue on the project web page at <a href="http://code.google.com/p/townguide/issues">http://code.google.com/p/townguide/issues</a>. 
+
+<h2>Alternatives</h2>
+<a href="http://www.maposmatic.org">www.maposmatic.org</a> provide a similar
+service, producing printable maps with street indices (indexes?).
 </body>
 </html>
